@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2009, 2011-2012 - TortoiseSVN
+// Copyright (C) 2007-2009, 2011-2013 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -23,13 +23,11 @@
 #include "MergeWizardTree.h"
 #include "MergeWizardRevRange.h"
 #include "MergeWizardOptions.h"
-#include "MergeWizardReintegrate.h"
 #include "AeroGlass.h"
 #include "AeroControls.h"
 
 #define MERGEWIZARD_REVRANGE    0
 #define MERGEWIZARD_TREE        1
-#define MERGEWIZARD_REINTEGRATE 2
 
 class CMergeWizard : public CResizableSheetEx
 {
@@ -54,7 +52,6 @@ protected:
     CMergeWizardTree                tree;
     CMergeWizardRevRange            revrange;
     CMergeWizardOptions             options;
-    CMergeWizardReintegrate         reintegrate;
 
 public:
     CTSVNPath                       wcPath;
