@@ -49,6 +49,8 @@ Version 1.8.1
        disable record-only option. (Stefan)
 - BUG: Issue #515: Crash in TMerge when
        copying text. (Stefan)
+- CHG: Issue #516: Remove reintegrate merge
+       page from merge wizard. (Stefan)
 
 Version 1.8.0
 See the release notes here:
